--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -4,5 +4,8 @@
     color: $font-color;
     width: $width;
     height: $height;
+    outline: none; 
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    -webkit-tap-highlight-color: transparent;
 }
 
